<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
   >

    <item
        android:id="@+id/action_showpopup"
        android:visible="false"
        android:title="Popup"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_notice"
         android:title="" android:visible="false"
        android:icon="@drawable/ic_baseline_chat_24"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_lang"
        android:orderInCategory="100" android:visible="false"
        android:title="@string/action_lang"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_downline_balance"
        android:orderInCategory="100"   android:visible="false"
        android:title="@string/action_downline_bal"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_payment_req"
        android:orderInCategory="100"  android:visible="false"
        android:title="@string/payment_request"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_update_operator"
        android:orderInCategory="100"
        android:title="@string/update_operator"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:title="@string/action_refresh" android:icon="@drawable/ic_refreshed_icon"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_support"
        android:orderInCategory="100"
        android:title="support"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_privacy_policy"
        android:orderInCategory="100"
        android:title="Privacy Policy"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_refund_policy"
        android:orderInCategory="100"
        android:title="Refund Policy"
        app:showAsAction="never" />
</menu>
