<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <include layout="@layout/toolbar"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="10dp"
                    android:textSize="14dp" android:visibility="gone"
                    android:fontFamily="serif"
                    android:text="@string/wallet"/>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10sp" android:visibility="gone"
                    android:layout_marginLeft="40sp"
                    android:layout_marginRight="40sp">

                    <RadioButton
                        android:layout_width="24dp"
                        android:layout_height="24dp"

                        android:paddingLeft="10dip"
                        android:text="@string/prepaid"
                        android:fontFamily="serif"
                        android:textSize="12sp"
                        android:layout_weight="1"
                        android:id="@+id/prepaid"
                        android:checked="true"/>

                    <RadioButton
                        android:layout_width="24dp"
                        android:layout_height="24dp"

                        android:paddingLeft="10dip"
                        android:text="@string/utility"
                        android:fontFamily="serif"
                        android:textSize="12sp"
                        android:layout_weight="1"
                        android:id="@+id/utility"/>
                </RadioGroup>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="10dp"
                    android:textSize="14dp"
                    android:visibility="gone"
                    android:fontFamily="serif"
                    android:text="@string/payment_mode"/>

                <Spinner
                    android:id="@+id/paymentmode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:hint="Select Payment mode"
                    android:visibility="gone"
                    android:fontFamily="serif"
                    android:drawableRight="@drawable/ic_keyboard_arrow_down_black_24dp"
                    android:focusable="false"
                    android:gravity="center_vertical"
                    android:singleLine="true"
                    android:text=""
                    android:textSize="16sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="10dp"
                    android:textSize="14dp"
                    android:visibility="gone"
                    android:fontFamily="serif"
                    android:text="Role :"/>

                <EditText
                    android:id="@+id/bankRole"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:hint="Select Role" android:visibility="gone"
                    android:fontFamily="serif"
                    android:drawableRight="@drawable/ic_keyboard_arrow_down_black_24dp"
                    android:focusable="false"
                    android:gravity="center_vertical"
                    android:singleLine="true"
                    android:text=""
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="10dp"
                    android:textSize="14dp"
                    android:fontFamily="serif"
                    android:text="@string/bank_title"/>

                <EditText
                    android:id="@+id/bankFund"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:hint="@string/select_bank"
                    android:fontFamily="serif"
                    android:drawableRight="@drawable/ic_keyboard_arrow_down_black_24dp"
                    android:focusable="false"
                    android:gravity="center_vertical"
                    android:singleLine="true"
                    android:text=""
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="10dp"
                    android:fontFamily="serif"
                    android:textSize="14dp"
                    android:text="@string/account_no"/>

                <EditText
                    android:id="@+id/number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:focusable="false"
                    android:fontFamily="serif"
                    android:gravity="center_vertical"
                    android:singleLine="true"
                    android:text=""
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="10dp"
                    android:textSize="14dp"
                    android:fontFamily="serif"
                    android:text="@string/transaction_id"/>

                <EditText
                    android:id="@+id/txtTransactionID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="serif"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:maxLines="1" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="20dp"
                    android:textSize="14dp"
                    android:text="@string/amount_hint"/>

                <EditText
                    android:id="@+id/txttranferAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:singleLine="true"
                    android:ellipsize="end" android:inputType="number"
                    android:maxLines="1"
                    android:drawableLeft="@drawable/ic_rupee_indian_color"
                    android:fontFamily="serif"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="20dp"
                    android:textSize="14dp" android:visibility="gone"
                    android:text="@string/amount_hint_in_words"/>

                <EditText
                    android:id="@+id/AmountInWords"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:ellipsize="end"  android:visibility="gone"
                    android:inputType="text"
                    android:drawableLeft="@drawable/ic_rupee_indian_color"
                    android:fontFamily="serif"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="20dp"
                    android:textSize="14dp"
                    android:text="@string/remark_hint"/>

                <EditText
                    android:id="@+id/remark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp" />

                <LinearLayout
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_width="match_parent"  android:visibility="gone"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/uploadImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/upload_image"
                        android:textStyle="bold"
                        android:drawableLeft="@drawable/ic_file_upload_black_24dp"
                        />
                </LinearLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18dp"
                    android:visibility="gone"
                    android:fontFamily="serif"
                    android:layout_marginTop="20dp"
                    android:text="@string/fund_type"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnPaymentSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_alignParentBottom="true"
        android:fontFamily="serif"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textSize="20dp"
        android:background="@color/colorPrimary"/>

</RelativeLayout>
