<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />
    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:id="@+id/horizontal"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <Button
                android:layout_width="wrap_content"

                android:id="@+id/Distributor"
                android:textColor="@color/white"
                android:text="@string/distributors"
                android:layout_margin="3dp"
                android:background="@drawable/buttonback_new"
                android:textAllCaps="false"
                android:layout_height="wrap_content"/>
            <Button
                android:layout_width="wrap_content"
                android:id="@+id/Retailer"
                android:textColor="@color/white"
                android:text="@string/ret"
                android:layout_margin="3dp"
                android:background="@drawable/bg_btnok"
                android:textAllCaps="false"
                android:layout_weight=".25"
                android:layout_height="wrap_content"/>
            <Button
                android:layout_width="wrap_content"
                android:id="@+id/ApiUser"
                android:textColor="@color/white"
                android:text="@string/api_user"
                android:layout_margin="3dp"
                android:background="@drawable/bg_btnok"
                android:textAllCaps="false"
                android:layout_weight=".25"
                android:layout_height="wrap_content"/>
            <Button
                android:layout_width="wrap_content"
                android:id="@+id/MDistributor"
                android:textColor="@color/white"
                android:text="@string/md"
                android:layout_margin="3dp" android:visibility="visible"
                android:background="@drawable/bg_btnok"
                android:textAllCaps="false"
                android:layout_weight=".25"
                android:layout_height="wrap_content"/>
            <Button
                android:layout_width="wrap_content"
                android:id="@+id/subAdmin"
                android:textColor="@color/white"
                android:text="@string/sa"
                android:layout_margin="3dp" android:visibility="visible"
                android:background="@drawable/bg_btnok"
                android:textAllCaps="false"
                android:layout_weight=".25"
                android:layout_height="wrap_content"/>



        </LinearLayout>

    </HorizontalScrollView>

    <RelativeLayout
        android:id="@+id/searchContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/horizontal"
        android:visibility="visible"
        android:layout_margin="2dp">

        <RelativeLayout
            android:id="@+id/userNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

            <EditText
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1px"
                android:background="@color/white"
                android:hint="@string/name_hint"
                android:fontFamily="serif"
                android:padding="10dp" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/searchLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@color/white"
            android:padding="10dp">

            <ImageView
                android:id="@+id/search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@drawable/ic_search_icon" />

        </RelativeLayout>
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/searchContainer"
        android:background="@color/colorBackground"
        android:scrollbars="vertical" />

    <TextView
        android:id="@+id/noData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="20dp"
        android:text="@string/no_data"
        android:textColor="@color/colorBackground"
        android:textSize="16sp"
        android:visibility="gone" />

</RelativeLayout>